--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "silber/page-cache": "^1.0",
         "spatie/laravel-export": "^0.3.9"
     },
     "require-dev": {
